# Personal-Website

./: .gitignore  LICENSE  README.md
backend/: .env.example  CLAUDE.md  README.md  env.example  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/controllers/: __init__.py  docs_controller.py  health_controller.py
backend/app/core/: __init__.py  config.py  exceptions.py  responses.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  base.py
backend/app/repositories/: __init__.py  base.py
backend/app/schemas/: __init__.py  base.py  common_schemas.py
backend/app/services/: __init__.py
backend/tests/: __init__.py  conftest.py  test_controllers.py
frontend/: .env.example  CLAUDE.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/about/: page.tsx
frontend/app/blog/: page.tsx
frontend/app/blog/[slug]/: page.tsx
frontend/app/projects/: page.tsx
frontend/components/about/: SkillBadges.tsx  Timeline.tsx
frontend/components/blog/: BlogClient.tsx  PostCard.tsx  PostHeader.tsx
frontend/components/home/: HeroSection.tsx
frontend/components/layout/: Footer.tsx  NavBar.tsx  ThemeToggle.tsx
frontend/components/projects/: ProjectCard.tsx
frontend/components/ui/: badge.tsx  button-variants.ts  button.tsx
frontend/content/: about.mdx
frontend/content/posts/: documentation-templates-why-and-how.mdx  dual-id-pattern-uuid-integer.mdx  hello-world.mdx  mscr-architecture-pattern.mdx  race-condition-prevention-check-then-catch.mdx  transaction-control-services-repositories.mdx  using-claude-for-documentation.mdx
frontend/lib/: github.ts  mdx.ts  types.ts
